force-app/main/default/objects/order__c/fields/exported__c.field-meta.xml
<CustomField>
    <fullName>exported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exported</label>
    <type>Checkbox</type>
</CustomField>