force-app/main/default/objects/order__c/fields/Extend_On_hold_time__c.field-meta.xml
<CustomField>
    <fullName>Extend_On_hold_time__c</fullName>
    <label>Extend On hold time</label>
    <type>DateTime</type>
</CustomField>