force-app/main/default/objects/order__c/fields/external_id__c.field-meta.xml
<CustomField>
    <fullName>external_id__c</fullName>
    <externalId>true</externalId>
    <label>external id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>