force-app/main/default/objects/order__c/fields/Final_Documents_Required__c.field-meta.xml
<CustomField>
    <fullName>Final_Documents_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Documents Required</label>
    <type>Checkbox</type>
</CustomField>