force-app/main/default/objects/order__c/fields/Fire_Bon_Voyage__c.field-meta.xml
<CustomField>
    <fullName>Fire_Bon_Voyage__c</fullName>
    <formula>Days_until_Departure_Date__c - 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fire Bon Voyage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>