force-app/main/default/objects/order__c/fields/first_name_purchaser__c.field-meta.xml
<CustomField>
    <fullName>first_name_purchaser__c</fullName>
    <label>Purchaser First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>