force-app/main/default/objects/order__c/fields/Flight_Margin__c.field-meta.xml
<CustomField>
    <fullName>Flight_Margin__c</fullName>
    <formula>Max_Net_P_P__c -  Total_Flight_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flight Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>