force-app/main/default/objects/order__c/fields/Flight_Schedule_Change__c.field-meta.xml
<CustomField>
    <fullName>Flight_Schedule_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When ever this field changes to checked(true) it will fire an email to let the customer know that there has been a change in their flights</description>
    <inlineHelpText>When ever this field changes to checked(true) it will fire an email to let the customer know that there has been a change in their flights</inlineHelpText>
    <label>Flight Schedule Change</label>
    <type>Checkbox</type>
</CustomField>