force-app/main/default/objects/order__c/fields/Flight_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Flight_Surcharge__c</fullName>
    <formula>IF( Deal_ID__c = &quot;3909&quot;,  departures_dates__r.HSS_Flight__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flight Surcharge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>