force-app/main/default/objects/order__c/fields/Flights_Cancelled_Date__c.field-meta.xml
<CustomField>
    <fullName>Flights_Cancelled_Date__c</fullName>
    <description>Updated by WFR</description>
    <label>Flights Cancelled Date</label>
    <type>Date</type>
</CustomField>