force-app/main/default/objects/order__c/fields/Flights_Open__c.field-meta.xml
<CustomField>
    <fullName>Flights_Open__c</fullName>
    <label>Flights Open</label>
    <summaryFilterItems>
        <field>PNR__c.Refund_Status__c</field>
        <operation>equals</operation>
        <value>Flights open</value>
    </summaryFilterItems>
    <summaryForeignKey>PNR__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>