force-app/main/default/objects/order__c/fields/Flights_Ticketed__c.field-meta.xml
<CustomField>
    <fullName>Flights_Ticketed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flights Ticketed</label>
    <type>Checkbox</type>
</CustomField>