force-app/main/default/objects/order__c/fields/Flights_ticketed_by_UJ__c.field-meta.xml
<CustomField>
    <fullName>Flights_ticketed_by_UJ__c</fullName>
    <formula>deal__r.Flights_Ticketed_by_UJ__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flights ticketed by UJ?</label>
    <type>Checkbox</type>
</CustomField>