force-app/main/default/objects/order__c/fields/Flights_Ticketed_Date__c.field-meta.xml
<CustomField>
    <fullName>Flights_Ticketed_Date__c</fullName>
    <label>Flights Ticketed Date</label>
    <type>Date</type>
</CustomField>