force-app/main/default/objects/order__c/fields/full_name_purchaser__c.field-meta.xml
<CustomField>
    <fullName>full_name_purchaser__c</fullName>
    <label>Purchaser Full Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>