force-app/main/default/objects/order__c/fields/Full_SFID__c.field-meta.xml
<CustomField>
    <fullName>Full_SFID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full SFID</label>
    <type>Text</type>
</CustomField>