force-app/main/default/objects/order__c/fields/generate_order_lines__c.field-meta.xml
<CustomField>
    <fullName>generate_order_lines__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Order Lines</label>
    <type>Checkbox</type>
</CustomField>