force-app/main/default/objects/order__c/fields/generate_order_lines_date__c.field-meta.xml
<CustomField>
    <fullName>generate_order_lines_date__c</fullName>
    <label>Generate Order Lines Date</label>
    <type>DateTime</type>
</CustomField>