force-app/main/default/objects/order__c/fields/grand_total__c.field-meta.xml
<CustomField>
    <fullName>grand_total__c</fullName>
    <formula>IF(  ISBLANK( Wholesale_Commissions__c ) ,
(total_price__c +  Flight_Surcharge__c ) - total_discounts__c,
(Wholesale_Amount_Payable__c +  Flight_Surcharge__c ) - total_discounts__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>