force-app/main/default/objects/order__c/fields/has_order_documents__c.field-meta.xml
<CustomField>
    <fullName>has_order_documents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Order Documents</label>
    <type>Checkbox</type>
</CustomField>