force-app/main/default/objects/order__c/fields/HSS__c.field-meta.xml
<CustomField>
    <fullName>HSS__c</fullName>
    <formula>IF( departures_dates__r.HSS__c ,  departures_dates__r.HSS_amount__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HSS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>