force-app/main/default/objects/order__c/fields/hss_escapes__c.field-meta.xml
<CustomField>
    <fullName>hss_escapes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>HSS - Escapes</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>