force-app/main/default/objects/order__c/fields/HSS_Flights__c.field-meta.xml
<CustomField>
    <fullName>HSS_Flights__c</fullName>
    <formula>departures_dates__r.HSS_Flight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HSS Flight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>