force-app/main/default/objects/order__c/fields/hss_line_price__c.field-meta.xml
<CustomField>
    <fullName>hss_line_price__c</fullName>
    <defaultValue>0</defaultValue>
    <label>HSS Line Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>