force-app/main/default/objects/order__c/fields/HSS_Qty_Net_Price__c.field-meta.xml
<CustomField>
    <fullName>HSS_Qty_Net_Price__c</fullName>
    <description>line price qty - commission qty</description>
    <formula>hss_qty_price__c - HSS_Qty_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HSS Qty Net Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>