force-app/main/default/objects/order__c/fields/hss_qty_price__c.field-meta.xml
<CustomField>
    <fullName>hss_qty_price__c</fullName>
    <formula>IF( AND(Deal_ID__c=&apos;3335&apos;,is_phone_sale__c), hss_line_price__c ,



IF( TEXT(departures_dates__r.fee_application__c) = &quot;Per PAX&quot;,
(number_of_adults__c  +  number_of_children__c) * hss_line_price__c, 
hss_line_price__c * qty__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HSS Qty Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>