force-app/main/default/objects/order__c/fields/In_Date_Range_Flights_del__c.field-meta.xml
<CustomField>
    <fullName>In_Date_Range_Flights_del__c</fullName>
    <formula>departures_dates__r.date__c  &lt;  (TODAY() + 330)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In Date Range(Flights)</label>
    <type>Checkbox</type>
</CustomField>