force-app/main/default/objects/order__c/fields/Insurance_External_Price__c.field-meta.xml
<CustomField>
    <fullName>Insurance_External_Price__c</fullName>
    <label>Insurance (External) Price</label>
    <summarizedField>Visa_Insurance__c.Insurance_Total_External__c</summarizedField>
    <summaryForeignKey>Visa_Insurance__c.orders__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>