force-app/main/default/objects/order__c/fields/Insurance_Price__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Price__c</fullName>
    <label>Insurance Price</label>
    <summarizedField>Visa_Insurance__c.Insurance_Total_TAD__c</summarizedField>
    <summaryFilterItems>
        <field>Visa_Insurance__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Insurance</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Visa_Insurance__c.Insurance_Status__c</field>
        <operation>equals</operation>
        <value>Policy</value>
    </summaryFilterItems>
    <summaryForeignKey>Visa_Insurance__c.orders__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>