force-app/main/default/objects/order__c/fields/Insurance_Referral__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Referral__c</fullName>
    <label>Insurance Referral</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insurance Quote Required</fullName>
            </value>
            <value>
                <fullName>Refused - Already purchased TAD Insurance</fullName>
            </value>
            <value>
                <fullName>Refused - Already purchased other</fullName>
            </value>
            <value>
                <fullName>Refused - Has Credit Card insurance</fullName>
            </value>
            <value>
                <fullName>Insurance Quote Provided</fullName>
                <label>Insurance Quote Provided (VI Team use only)</label>
            </value>
            <value>
                <fullName>Attempted Contact (VI Team use only)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>