force-app/main/default/objects/order__c/fields/Is_Escape_Deal__c.field-meta.xml
<CustomField>
    <fullName>Is_Escape_Deal__c</fullName>
    <formula>OR(deal__r.Is_Escapes__c,
deal__r.show_as_escape__c,
INCLUDES( deal__r.deal_type__c , &quot;stay&quot;),
INCLUDES( deal__r.deal_type_nz__c , &quot;stay&quot;) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Escape Deal</label>
    <type>Checkbox</type>
</CustomField>