force-app/main/default/objects/order__c/fields/Is_Long_Lead__c.field-meta.xml
<CustomField>
    <fullName>Is_Long_Lead__c</fullName>
    <formula>IF( departure_date__c - DATEVALUE(time_confirmed__c) &gt; 127, &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Long Lead</label>
    <type>Text</type>
</CustomField>