force-app/main/default/objects/order__c/fields/is_phone_sale__c.field-meta.xml
<CustomField>
    <fullName>is_phone_sale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Phone Sale</label>
    <type>Checkbox</type>
</CustomField>