force-app/main/default/objects/order__c/fields/Is_Short_Lead__c.field-meta.xml
<CustomField>
    <fullName>Is_Short_Lead__c</fullName>
    <formula>IF( departure_date__c - DATEVALUE(Set_Order_Confirmed_time__c) &lt;= 90, &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Short Lead</label>
    <type>Text</type>
</CustomField>