force-app/main/default/objects/order__c/fields/is_web_order__c.field-meta.xml
<CustomField>
    <fullName>is_web_order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Web Order</label>
    <type>Checkbox</type>
</CustomField>