force-app/main/default/objects/order__c/fields/isstay__c.field-meta.xml
<CustomField>
    <fullName>isstay__c</fullName>
    <formula>IF(OR(INCLUDES(deal__r.deal_type__c, &apos;stay&apos;), INCLUDES(deal__r.deal_type_nz__c, &apos;stay&apos;)), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isstay</label>
    <type>Checkbox</type>
</CustomField>