force-app/main/default/objects/order__c/fields/land_activity_a__c.field-meta.xml
<CustomField>
    <fullName>land_activity_a__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Land Activity A</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>land_activity__c.Deal__c</field>
            <operation>equals</operation>
            <valueField>$Source.deal__c</valueField>
        </filterItems>
        <filterItems>
            <field>land_activity__c.order_filter__c</field>
            <operation>contains</operation>
            <valueField>$Source.order_record_type_name__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>land_activity__c</referenceTo>
    <relationshipLabel>order (Land Activity A)</relationshipLabel>
    <relationshipName>order1</relationshipName>
    <type>Lookup</type>
</CustomField>