force-app/main/default/objects/order__c/fields/Land_Activity_ALL_qty__c.field-meta.xml
<CustomField>
    <fullName>Land_Activity_ALL_qty__c</fullName>
    <formula>(land_activity_qty_price__c+ 
land_activity_a_qty_price__c+ 
land_activity_b_qty_price__c+ 
land_activity_c_qty_price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Land Activity ALL Qty Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>