force-app/main/default/objects/order__c/fields/land_activity_b_qty_price__c.field-meta.xml
<CustomField>
    <fullName>land_activity_b_qty_price__c</fullName>
    <formula>land_activity_b_line_price__c * qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Land Activity B Qty Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>