force-app/main/default/objects/order__c/fields/Land_Activity_C_Commission__c.field-meta.xml
<CustomField>
    <fullName>Land_Activity_C_Commission__c</fullName>
    <label>Land Activity C Commission</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>