force-app/main/default/objects/order__c/fields/land_activity_c_line_price__c.field-meta.xml
<CustomField>
    <fullName>land_activity_c_line_price__c</fullName>
    <label>Land Activity C Line Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>