force-app/main/default/objects/order__c/fields/Land_Activity_C_Qty_Commission__c.field-meta.xml
<CustomField>
    <fullName>Land_Activity_C_Qty_Commission__c</fullName>
    <formula>Land_Activity_C_Commission__c * qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Land Activity C Qty Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>