force-app/main/default/objects/order__c/fields/Land_Activity_C_Qty_Net_Price__c.field-meta.xml
<CustomField>
    <fullName>Land_Activity_C_Qty_Net_Price__c</fullName>
    <formula>land_activity_c_qty_price__c - Land_Activity_C_Qty_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Land Activity C Qty Net Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>