force-app/main/default/objects/order__c/fields/Link_to_another_order__c.field-meta.xml
<CustomField>
    <fullName>Link_to_another_order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Link to another order</label>
    <referenceTo>order__c</referenceTo>
    <relationshipLabel>order</relationshipLabel>
    <relationshipName>order</relationshipName>
    <type>Lookup</type>
</CustomField>