force-app/main/default/objects/order__c/fields/Link_to_other_booking__c.field-meta.xml
<CustomField>
    <fullName>Link_to_other_booking__c</fullName>
    <label>Link to other booking</label>
    <length>100</length>
    <type>Text</type>
</CustomField>