force-app/main/default/objects/order__c/fields/link_token__c.field-meta.xml
<CustomField>
    <fullName>link_token__c</fullName>
    <label>Link Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>