force-app/main/default/objects/order__c/fields/marketing_channel__c.field-meta.xml
<CustomField>
    <fullName>marketing_channel__c</fullName>
    <label>Marketing Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>Friend/relative</fullName>
            </value>
            <value>
                <fullName>Newspaper</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Gold Coast Titans NRL</fullName>
            </value>
            <value>
                <fullName>Return Customer</fullName>
            </value>
            <value>
                <fullName>Travel Agent</fullName>
            </value>
            <value>
                <fullName>Roadshow</fullName>
            </value>
            <value>
                <fullName>Email (Newsletter)</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Melbourne City Football Club</fullName>
            </value>
            <value>
                <fullName>Podcast</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>TripADeal Competition</fullName>
            </value>
            <value>
                <fullName>NRMA</fullName>
            </value>
            <value>
                <fullName>Billboard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>