force-app/main/default/objects/order__c/fields/marketing_source__c.field-meta.xml
<CustomField>
    <fullName>marketing_source__c</fullName>
    <label>Marketing Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>