force-app/main/default/objects/order__c/fields/Marketing_Spend__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Spend__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Spend</label>
    <referenceTo>Marketing_Spend__c</referenceTo>
    <relationshipLabel>order</relationshipLabel>
    <relationshipName>order</relationshipName>
    <type>Lookup</type>
</CustomField>