force-app/main/default/objects/order__c/fields/Max_Net_P_P__c.field-meta.xml
<CustomField>
    <fullName>Max_Net_P_P__c</fullName>
    <formula>departures_dates__r.HSS_Flight__c    +   departure_city_line_price__c   +  ae_line_price__c  +   sb_line_price__c   +  airline_upgrade_line_price__c +   Options__r.Flights_Max_Nett__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Net P/P</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>